# root-analysis-plugins

./: AnalysisPlugins-config.cmake.in  CMakeLists.txt  log.md
AnalysisPlugins/: Folder.h  Hist.h  HistUtils.h  Tree.h
RAnalysis/: CsvData.h  Event.h  Folder.h  Histogram.h  HistogramUtils.h  Profile.h  RDS.h  RData.h  Scan.h  Tree.h  TreeData.h
Root/: CsvData.cxx  Event.cxx  HistogramUtils.cxx  LinkDef.h  RDS.cxx  RData.cxx  Tree.cxx  TreeData.cxx
benchmarks/: csv_benchmark.cxx  hww.cxx  mumu.cxx
cmake/: atlas.cmake  standalone.cmake
data/: hww.root
examples/: hww_example.cxx  mjj_example.cxx  phys_example.cxx  systematic_variations.cxx  tree_example.cxx  tree_example.py  ttbar_example.cxx  xaod_example.cxx  xaod_example.py
rootana/: Event.h  Folder.h  Hist.h  Histogram.h  HistogramUtils.h  LinkDef.h  RDS.cxx  RDS.h  Tree.cxx  Tree.h
